fix: vertically align radio buttons for test filters

--- a/frontend/src/components/FilterControls/FilterControls.module.scss
+++ b/frontend/src/components/FilterControls/FilterControls.module.scss
@@ -8,6 +8,13 @@
   flex-direction: column;
 }
 .checkboxContainer {
+  display: flex;
+  div {
+    margin-left: 5px;
+    input {
+      margin-left: -16px;
+    }
+  }
 }
 .failureReasonFilterControls {
   display: flex;
